[gd_scene load_steps=20 format=3 uid="uid://dnhxhnmlrp60l"]

[ext_resource type="Script" path="res://source/dog.gd" id="1_1ccjv"]
[ext_resource type="Texture2D" uid="uid://dy6iyoerwx7xy" path="res://assets/img/dog.png" id="1_qd1kl"]
[ext_resource type="PackedScene" uid="uid://csr72687hk4ee" path="res://source/player/player_detector.tscn" id="2_72pmv"]
[ext_resource type="Texture2D" uid="uid://dl8l17lvf63bg" path="res://assets/img/exclamation.png" id="4_lwb6t"]

[sub_resource type="Animation" id="Animation_ujrtv"]
resource_name = "sleep"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_06myn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kjs41"]
resource_name = "bark"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 7, 8, 9]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"got_caught"
}]
}

[sub_resource type="Animation" id="Animation_naujk"]
resource_name = "wake"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_extwp"]
_data = {
"RESET": SubResource("Animation_06myn"),
"bark": SubResource("Animation_kjs41"),
"sleep": SubResource("Animation_ujrtv"),
"wake": SubResource("Animation_naujk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ceee"]
size = Vector2(21, 25)

[sub_resource type="CircleShape2D" id="CircleShape2D_8xaly"]
radius = 78.0256

[sub_resource type="AtlasTexture" id="AtlasTexture_xognh"]
atlas = ExtResource("4_lwb6t")
region = Rect2(0, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pkhm"]
atlas = ExtResource("4_lwb6t")
region = Rect2(11, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5ytr"]
atlas = ExtResource("4_lwb6t")
region = Rect2(22, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsfkj"]
atlas = ExtResource("4_lwb6t")
region = Rect2(33, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldc8t"]
atlas = ExtResource("4_lwb6t")
region = Rect2(44, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vya2"]
atlas = ExtResource("4_lwb6t")
region = Rect2(55, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpnjj"]
atlas = ExtResource("4_lwb6t")
region = Rect2(66, 0, 11, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_jviqa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xognh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pkhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5ytr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsfkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldc8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vya2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpnjj")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="Dog" type="CharacterBody2D"]
script = ExtResource("1_1ccjv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qd1kl")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "sleep"
libraries = {
"": SubResource("AnimationLibrary_extwp")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_1ceee")

[node name="PlayerDetector" parent="." instance=ExtResource("2_72pmv")]

[node name="CollisionPolygon2D" parent="PlayerDetector" index="0"]
polygon = PackedVector2Array()
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_8xaly")

[node name="Exclamation" type="AnimatedSprite2D" parent="."]
z_index = 10
position = Vector2(0, -19)
sprite_frames = SubResource("SpriteFrames_jviqa")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="player_lost" from="PlayerDetector" to="." method="_on_player_detector_player_lost"]
[connection signal="player_seen" from="PlayerDetector" to="." method="_on_player_detector_player_seen"]
[connection signal="animation_finished" from="Exclamation" to="." method="_on_exclamation_animation_finished"]

[editable path="PlayerDetector"]
